--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -47,6 +47,17 @@ body{
 	z-index: 2;
 	background-color: rgb(238, 238, 238, 0.9);
 }
+.popupShow {
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 2;
+	background-color: rgb(238, 238, 238, 0.9);
+}
 .mylabel{
     margin-bottom: 0.25rem;
     margin-top: 0.5rem;
@@ -92,6 +103,10 @@ body{
     max-height: 19rem;
     display: inline;
     margin: 1rem;
+}
+.hidePhoto{
+    -webkit-filter: blur(10px);
+    filter:blur(10px);
 }
 .editMetaInfoDiv{
 	width: 30rem;
@@ -164,4 +179,44 @@ body{
 	overflow: hidden;
 	text-overflow: ellipsis;
 	width: 240px;
+}
+
+/******************************************Shared Photos**********************************************/
+.searchDiv{
+    max-width: 30rem;
+    margin: 0 auto 0 auto;
+}
+
+@media(max-width:900px){
+    .mobileCenter{
+        text-align: center;
+    }
+    .mobileShow{
+        display: block;
+    }
+    .imgDiv {
+        max-height: 18rem;
+        max-width: 20rem;
+        margin: 0 auto 0 auto;
+    }
+    .picImgDiv {
+        max-height: 16rem;
+        max-width: 19rem;
+    }
+      
+    .picImage {
+        max-height: 15rem;
+        max-width: 100%;
+    }
+    .showPhotoImg{
+        max-width: 10rem;
+        max-height: 10rem;
+    }
+    .editMetaDiv{
+        position: absolute;
+        margin-top: 6.5rem;
+    }
+    .btnDeletePic{
+        margin-top: 0.5rem;
+    }
 }
