--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,9 @@
                 <div class="col-lg-6 textCenter signDiv">
                     <h3>Sign In</h3>
                     <br>
+                    <% if (lError === true){%>
+                        <p class="text-danger">Invalid Credentials</p>
+                    <%}%>
                     <form action="/signin" method="post">
                         <input class="form-control" type="email" name="username" placeholder="Email" aria-label="Email" required>
                         <input class="form-control margintop1" type="password" name="password" placeholder="Password" aria-label="Password" required>
@@ -25,6 +28,9 @@
                 <div class="col-lg-6 textCenter signDiv">
                     <h3>Sign Up</h3>
                     <br>
+                    <% if (sError === true){%>
+                        <p class="text-danger">User already exists</p>
+                    <%}%>
                     <form action="/signup" method="post">
                         <input class="form-control" type="email" name="username" placeholder="Enter your email" aria-label="Email" required>
                         <input class="form-control margintop1" type="password" name="password" placeholder="Enter your password" aria-label="Password" required>
