--- a/views/partials/editPic.ejs
+++ b/views/partials/editPic.ejs
@@ -2,15 +2,16 @@
     <div class="editMetaInfoDiv">
         <h4 class="text-success textCenter">Meta Data</h4>
         <div class="row margintop05">
-            <div class="col-lg-6">
+            <div class="col-lg-6 mobileCenter">
                 <button class="btn btn-sm btn-info btnSharePic">Share Photo</button>
             </div>
-            <div class="col-lg-6 textRight">
+            <div class="col-lg-6 textRight mobileCenter">
                 <input type="hidden" name="picID" class="idForm" value="">
                 <button class="btn btn-sm btn-outline-danger btnDeletePic">Delete Photo</button>
             </div>
         </div>
         <form action="/editMeta" method="POST" class="margintop05">
+            <input type="hidden" name="site" class="siteForm">
             <label for="nameForm" class="mylabel">Photo Name:</label>
             <input name="picName" type="text" class="form-control" id="nameForm" placeholder="Photo Name">
             <label for="locationForm" class="mylabel">Geolocation:</label>
@@ -28,6 +29,9 @@
                 <button class="btn btn-success margintop1 width10" type="submit">Update</button>
             </div>
         </form>
+        <div class="textCenter margintop1">
+            <a class="btn btn-primary btn-sm" href="" download="" id="downloadForm" target="_blank">Download Photo</a>
+        </div>
         <div class="textCenter">
             <a href="#" class="btn btn-cancel margintop05 btnCloseMetaDiv width10">Close</a>
         </div>
@@ -38,6 +42,7 @@
     <div class="deletePicInfo">
         <h5 class="text-danger textCenter">Are you sure you want to delete this photo?</h5>
         <form action="/deletePic" method="POST" class="margintop05">
+            <input type="hidden" name="site" class="siteForm">
             <div class="textCenter">
                 <input type="hidden" name="picID" class="idForm" value="">
                 <button class="btn btn-danger margintop1 width10" type="submit">Delete</button>
