--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
         <div class="indexColour">
             <h1 class="textCenter"><span class="text-success"><b>Share</b></span> your <span class="text-success"><b>photos</b></span> with your <span class="text-success"><b>colleagues</b></span>!</h1>
             <br>
-            <div class="row margintop2">
+            <div class="row margintop2 removePadding">
                 <div class="col-lg-6 textCenter signDiv">
                     <h3>Sign In</h3>
                     <br>
@@ -26,6 +26,8 @@
                     </form>
                 </div>
                 <div class="col-lg-6 textCenter signDiv">
+                    <br class="mobileShow">
+                    <br class="mobileShow">
                     <h3>Sign Up</h3>
                     <br>
                     <% if (sError === true){%>
